<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gabo.myapplication.CreateMapFragment">
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/badge"
        android:actionLayout="@layout/feed_update_count"
        android:title="notifications"
        android:icon="@layout/shape_notification"
        app:showAsAction="always">
    </item>


    <item android:id="@+id/menu_item_viewRoutesMap" android:title="@string/menu_item_viewRouteMap"
        app:showAsAction="never" android:icon="@drawable/ic_action_map"/>
    <item android:id="@+id/menu_item_newRoute" android:title="@string/menu_item_createRoute"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_newCar" android:title="Registrar Carro"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        app:showAsAction="never" android:icon="@drawable/ic_action_settings"/>
    <item android:id="@+id/menu_item_login" android:title="@string/login"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_logout" android:title="@string/logout"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_newComment" android:title="new Comment"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_perfilruta" android:title="Ruta Perfil"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_item_drawer" android:title="Drawer"
        app:showAsAction="never"/>

</menu>
