<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:padding="20sp"
        android:layout_height="fill_parent">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carRegTitle"
            android:textSize="30sp">
        </TextView>
        <EditText
            android:id="@+id/EditTextMarca"
            android:layout_height="wrap_content"
            android:hint="@string/marca"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/EditTextModelo"
            android:layout_height="wrap_content"
            android:hint="@string/model"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/EditTextPlaca"
            android:layout_height="wrap_content"
            android:hint="@string/plate"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/EditTextColor"
            android:layout_height="wrap_content"
            android:hint="@string/color"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>
        <Button
            android:id="@+id/ButtonCarRegister"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:onClick="carRegister"
            android:layout_width="fill_parent">
        </Button>
    </LinearLayout>
</ScrollView>
