<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:padding="20sp"
        android:layout_height="fill_parent">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/CreateCommentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentRegTitle"
            android:textSize="30sp">
        </TextView>
        <EditText
            android:id="@+id/EditTextSubject"
            android:layout_height="wrap_content"
            android:hint="@string/commentSubject"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="wrap_content"
            android:hint="@string/commentBody"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:singleLine="true">
        </EditText>
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:onClick="commentRegister"
            android:layout_width="fill_parent">
        </Button>
    </LinearLayout>
</ScrollView>