<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="30sp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView

        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="30dp"
        android:textSize="30sp">
    </TextView>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/etUser"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="0"
            android:hint="@string/username"/>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/etPass"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="0"
            android:hint="@string/password"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Ingresar"
            android:id="@+id/btnIngresar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="0"/>




</LinearLayout>

</ScrollView>